gatewayclass.yml


###### For NLB

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-nlb 
  
  ## Donot work but the logic is  same as write just need to include that in the spec.parametersRef not 
  ## in annotationos.

  # annotations:
  #   gateway.k8s.aws/loadBalancerConfiguration: public-nlb -config

spec:
  controllerName: gateway.k8s.aws/nlb 
  parametersRef:
    group: gateway.k8s.aws
    kind: LoadBalancerConfiguration
    name: public-nlb-config
    namespace: default


---


apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: default

  ## Not needed ( Even though mentioned in the DOCS and Donot Work )
  ## can be done using the same spec.infrastructure.parametersRef.

  # annotations: 
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb "
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  gatewayClassName: aws-nlb 
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: public-nlb-config


  listeners:
    - name: tcp-80
      protocol: TCP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: tcp-443
      protocol: TCP
      port: 443
      allowedRoutes:
        namespaces:
          from: All  

---



apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: my-tcp-route
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-api
    namespace: default
    sectionName: tcp-80
  rules:
  - backendRefs:
    - name: service
      port: 80

---

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: my-tcp-route-443
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-api
    namespace: default
    sectionName: tcp-443
  rules:
  - backendRefs:
    - name: service
      port: 80


---


apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80 
    # nodePort: 30070 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:latest
        
        ports:
        - containerPort: 80
