geteway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-nlb 
spec:
  controllerName: gateway.k8s.aws/nlb 
  parametersRef:
    group: gateway.k8s.aws
    kind: LoadBalancerConfiguration
    name: public-nlb-config
    namespace: default

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: default
spec:
  gatewayClassName: aws-nlb 
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: public-nlb-config

  listeners:
    - name: http-80
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https-443
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: tls-certificate
          namespace: default
      allowedRoutes:
        namespaces:
          from: All  

---

# Create TLS Secret from your ACM certificate
# You'll need to export the certificate from ACM and create this secret
# apiVersion: v1
# kind: Secret
# metadata:
#   name: tls-certificate
#   namespace: default
# type: kubernetes.io/tls
# data:
#   tls.crt: <base64-encoded-cert>
#   tls.key: <base64-encoded-key>

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-route
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-api
    namespace: default
    sectionName: http-80
  rules:
  - backendRefs:
    - name: service
      port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-https-route
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-api
    namespace: default
    sectionName: https-443
  rules:
  - backendRefs:
    - name: service
      port: 80

---


apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80 
    # nodePort: 30070 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:latest
        
        ports:
        - containerPort: 80
